Parser.output
Terminals unused in grammar

   SEMICOLON
   OPENSQUARE
   CLOSESQUARE
   CONTINUE


Grammar

    0 $accept: Start $end

    1 Start: S

    2 S: code DOT

    3 code: inner_code
    4     | code inner_code

    5 inner_code: assignment
    6           | declaration
    7           | Ifstmt
    8           | whileloop
    9           | switchstmt
   10           | function_call
   11           | forloop
   12           | repeat
   13           | function

   14 datatype: BOOLTYPE
   15         | INTTYPE
   16         | FLOATTYPE
   17         | STRINGTYPE

   18 const_type: datatype CONST

   19 declaration: datatype inner_declaration
   20            | const_type inner_declaration

   21 Ifstmt: IF OPENBRACKET condition CLOSEDBRACKET OPENBRACE code DOT CLOSEDBRACE ELSE Ifstmt
   22       | IF OPENBRACKET condition CLOSEDBRACKET OPENBRACE code DOT CLOSEDBRACE
   23       | IF OPENBRACKET condition CLOSEDBRACKET OPENBRACE code DOT CLOSEDBRACE ELSE OPENBRACE code DOT CLOSEDBRACE

   24 repeat: REPEAT OPENBRACE inner_loop CLOSEDBRACE UNTIL OPENBRACKET condition CLOSEDBRACKET

   25 inner_loop: code DOT BREAK DOT code DOT
   26           | code DOT BREAK DOT
   27           | code DOT

   28 forloop: FOR OPENBRACKET iterator COMMA assignment CLOSEDBRACKET OPENBRACE code DOT CLOSEDBRACE

   29 iterator: INTTYPE IDENTIFIER EQUAL EXPR TO EXPR
   30         | IDENTIFIER EQUAL EXPR TO EXPR

   31 inner_declaration: IDENTIFIER
   32                  | IDENTIFIER EQUAL EXPR
   33                  | IDENTIFIER EQUAL BOOLEAN
   34                  | IDENTIFIER EQUAL STRING
   35                  | IDENTIFIER EQUAL condition

   36 whileloop: WHILE OPENBRACKET condition CLOSEDBRACKET OPENBRACE inner_loop CLOSEDBRACE

   37 parameters: datatype IDENTIFIER
   38           | datatype IDENTIFIER COMMA parameters

   39 function: datatype IDENTIFIER OPENBRACKET parameters CLOSEDBRACKET OPENBRACE code DOT RETURN EXPR DOT CLOSEDBRACE
   40         | VOIDTYPE IDENTIFIER OPENBRACKET parameters CLOSEDBRACKET OPENBRACE code DOT RETURN DOT CLOSEDBRACE

   41 function_call: IDENTIFIER OPENBRACKET list CLOSEDBRACKET

   42 list: EXPR
   43     | EXPR COMMA list

   44 switchstmt: SWITCH OPENBRACKET IDENTIFIER CLOSEDBRACKET OPENBRACE case_structure DEFAULT OPENBRACE code DOT CLOSEDBRACE CLOSEDBRACE
   45           | SWITCH OPENBRACKET IDENTIFIER CLOSEDBRACKET OPENBRACE case_structure CLOSEDBRACE

   46 case_structure: inner_case
   47               | inner_case case_structure

   48 inner_case: CASE OPENBRACKET INTEGER CLOSEDBRACKET OPENBRACE code DOT CLOSEDBRACE

   49 condition: condition AND inner_condition
   50          | condition OR inner_condition
   51          | NOT inner_condition
   52          | inner_condition
   53          | condition AND EXPR
   54          | condition OR EXPR
   55          | NOT EXPR

   56 inner_condition: OPENBRACKET condition CLOSEDBRACKET
   57                | EXPR GREATERTHAN EXPR
   58                | EXPR GREATERTHANEQ EXPR
   59                | EXPR LESSTHAN EXPR
   60                | EXPR LESSTHANEQ EXPR
   61                | EXPR EQUALITY BOOLEAN
   62                | EXPR EQUALITY EXPR
   63                | EXPR NOTEQUALITY BOOLEAN
   64                | EXPR NOTEQUALITY EXPR
   65                | function_call

   66 assignment: IDENTIFIER EQUAL EXPR
   67           | IDENTIFIER EQUAL STRING
   68           | IDENTIFIER EQUAL condition
   69           | IDENTIFIER INCREMENT
   70           | IDENTIFIER DECREMENT
   71           | IDENTIFIER PLUSEQ EXPR
   72           | IDENTIFIER MINUSEQ EXPR
   73           | IDENTIFIER MULTIPLYEQ EXPR
   74           | IDENTIFIER DIVIDEEQ EXPR

   75 EXPR: EXPR PLUS T
   76     | EXPR MINUS T
   77     | T

   78 T: T MULTIPLY M
   79  | T DIVIDE M
   80  | T MOD M
   81  | M

   82 M: G POWER M
   83  | G

   84 G: OPENBRACKET EXPR CLOSEDBRACKET
   85  | MINUS G
   86  | INTEGER
   87  | FLOAT
   88  | IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
MINUS (258) 76 85
PLUS (259) 75
MULTIPLY (260) 78
DIVIDE (261) 79
OPENBRACKET (262) 21 22 23 24 28 36 39 40 41 44 45 48 56 84
CLOSEDBRACKET (263) 21 22 23 24 28 36 39 40 41 44 45 48 56 84
INTEGER (264) 48 86
STRING (265) 34 67
FLOAT (266) 87
BOOLEAN (267) 33 61 63
OPENBRACE (268) 21 22 23 24 28 36 39 40 44 45 48
CLOSEDBRACE (269) 21 22 23 24 28 36 39 40 44 45 48
SEMICOLON (270)
MOD (271) 80
POWER (272) 82
OPENSQUARE (273)
CLOSESQUARE (274)
COMMA (275) 28 38 43
BOOLTYPE (276) 14
INTTYPE (277) 15 29
FLOATTYPE (278) 16
STRINGTYPE (279) 17
IDENTIFIER (280) 29 30 31 32 33 34 35 37 38 39 40 41 44 45 66 67 68
    69 70 71 72 73 74 88
GREATERTHANEQ (281) 58
LESSTHAN (282) 59
GREATERTHAN (283) 57
LESSTHANEQ (284) 60
EQUALITY (285) 61 62
NOTEQUALITY (286) 63 64
INCREMENT (287) 69
DECREMENT (288) 70
EQUAL (289) 29 30 32 33 34 35 66 67 68
MINUSEQ (290) 72
PLUSEQ (291) 71
MULTIPLYEQ (292) 73
DIVIDEEQ (293) 74
AND (294) 49 53
OR (295) 50 54
NOT (296) 51 55
CONST (297) 18
IF (298) 21 22 23
ELSE (299) 21 23
DOT (300) 2 21 22 23 25 26 27 28 39 40 44 48
FOR (301) 28
TO (302) 29 30
REPEAT (303) 24
UNTIL (304) 24
BREAK (305) 25 26
CONTINUE (306)
WHILE (307) 36
SWITCH (308) 44 45
CASE (309) 48
DEFAULT (310) 44
RETURN (311) 39 40
VOIDTYPE (312) 40


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
Start (59)
    on left: 1, on right: 0
S (60)
    on left: 2, on right: 1
code (61)
    on left: 3 4, on right: 2 4 21 22 23 25 26 27 28 39 40 44 48
inner_code (62)
    on left: 5 6 7 8 9 10 11 12 13, on right: 3 4
datatype (63)
    on left: 14 15 16 17, on right: 18 19 37 38 39
const_type (64)
    on left: 18, on right: 20
declaration (65)
    on left: 19 20, on right: 6
Ifstmt (66)
    on left: 21 22 23, on right: 7 21
repeat (67)
    on left: 24, on right: 12
inner_loop (68)
    on left: 25 26 27, on right: 24 36
forloop (69)
    on left: 28, on right: 11
iterator (70)
    on left: 29 30, on right: 28
inner_declaration (71)
    on left: 31 32 33 34 35, on right: 19 20
whileloop (72)
    on left: 36, on right: 8
parameters (73)
    on left: 37 38, on right: 38 39 40
function (74)
    on left: 39 40, on right: 13
function_call (75)
    on left: 41, on right: 10 65
list (76)
    on left: 42 43, on right: 41 43
switchstmt (77)
    on left: 44 45, on right: 9
case_structure (78)
    on left: 46 47, on right: 44 45 47
inner_case (79)
    on left: 48, on right: 46 47
condition (80)
    on left: 49 50 51 52 53 54 55, on right: 21 22 23 24 35 36 49 50
    53 54 56 68
inner_condition (81)
    on left: 56 57 58 59 60 61 62 63 64 65, on right: 49 50 51 52
assignment (82)
    on left: 66 67 68 69 70 71 72 73 74, on right: 5 28
EXPR (83)
    on left: 75 76 77, on right: 29 30 32 39 42 43 53 54 55 57 58 59
    60 61 62 63 64 66 71 72 73 74 75 76 84
T (84)
    on left: 78 79 80 81, on right: 75 76 77 78 79 80
M (85)
    on left: 82 83, on right: 78 79 80 81 82
G (86)
    on left: 84 85 86 87 88, on right: 82 83 85


state 0

    0 $accept: . Start $end

    BOOLTYPE    shift, and go to state 1
    INTTYPE     shift, and go to state 2
    FLOATTYPE   shift, and go to state 3
    STRINGTYPE  shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    IF          shift, and go to state 6
    FOR         shift, and go to state 7
    REPEAT      shift, and go to state 8
    WHILE       shift, and go to state 9
    SWITCH      shift, and go to state 10
    VOIDTYPE    shift, and go to state 11

    Start          go to state 12
    S              go to state 13
    code           go to state 14
    inner_code     go to state 15
    datatype       go to state 16
    const_type     go to state 17
    declaration    go to state 18
    Ifstmt         go to state 19
    repeat         go to state 20
    forloop        go to state 21
    whileloop      go to state 22
    function       go to state 23
    function_call  go to state 24
    switchstmt     go to state 25
    assignment     go to state 26


state 1

   14 datatype: BOOLTYPE .

    $default  reduce using rule 14 (datatype)


state 2

   15 datatype: INTTYPE .

    $default  reduce using rule 15 (datatype)


state 3

   16 datatype: FLOATTYPE .

    $default  reduce using rule 16 (datatype)


state 4

   17 datatype: STRINGTYPE .

    $default  reduce using rule 17 (datatype)


state 5

   41 function_call: IDENTIFIER . OPENBRACKET list CLOSEDBRACKET
   66 assignment: IDENTIFIER . EQUAL EXPR
   67           | IDENTIFIER . EQUAL STRING
   68           | IDENTIFIER . EQUAL condition
   69           | IDENTIFIER . INCREMENT
   70           | IDENTIFIER . DECREMENT
   71           | IDENTIFIER . PLUSEQ EXPR
   72           | IDENTIFIER . MINUSEQ EXPR
   73           | IDENTIFIER . MULTIPLYEQ EXPR
   74           | IDENTIFIER . DIVIDEEQ EXPR

    OPENBRACKET  shift, and go to state 27
    INCREMENT    shift, and go to state 28
    DECREMENT    shift, and go to state 29
    EQUAL        shift, and go to state 30
    MINUSEQ      shift, and go to state 31
    PLUSEQ       shift, and go to state 32
    MULTIPLYEQ   shift, and go to state 33
    DIVIDEEQ     shift, and go to state 34


state 6

   21 Ifstmt: IF . OPENBRACKET condition CLOSEDBRACKET OPENBRACE code DOT CLOSEDBRACE ELSE Ifstmt
   22       | IF . OPENBRACKET condition CLOSEDBRACKET OPENBRACE code DOT CLOSEDBRACE
   23       | IF . OPENBRACKET condition CLOSEDBRACKET OPENBRACE code DOT CLOSEDBRACE ELSE OPENBRACE code DOT CLOSEDBRACE

    OPENBRACKET  shift, and go to state 35


state 7

   28 forloop: FOR . OPENBRACKET iterator COMMA assignment CLOSEDBRACKET OPENBRACE code DOT CLOSEDBRACE

    OPENBRACKET  shift, and go to state 36


state 8

   24 repeat: REPEAT . OPENBRACE inner_loop CLOSEDBRACE UNTIL OPENBRACKET condition CLOSEDBRACKET

    OPENBRACE  shift, and go to state 37


state 9

   36 whileloop: WHILE . OPENBRACKET condition CLOSEDBRACKET OPENBRACE inner_loop CLOSEDBRACE

    OPENBRACKET  shift, and go to state 38


state 10

   44 switchstmt: SWITCH . OPENBRACKET IDENTIFIER CLOSEDBRACKET OPENBRACE case_structure DEFAULT OPENBRACE code DOT CLOSEDBRACE CLOSEDBRACE
   45           | SWITCH . OPENBRACKET IDENTIFIER CLOSEDBRACKET OPENBRACE case_structure CLOSEDBRACE

    OPENBRACKET  shift, and go to state 39


state 11

   40 function: VOIDTYPE . IDENTIFIER OPENBRACKET parameters CLOSEDBRACKET OPENBRACE code DOT RETURN DOT CLOSEDBRACE

    IDENTIFIER  shift, and go to state 40


state 12

    0 $accept: Start . $end

    $end  shift, and go to state 41


state 13

    1 Start: S .

    $default  reduce using rule 1 (Start)


state 14

    2 S: code . DOT
    4 code: code . inner_code

    BOOLTYPE    shift, and go to state 1
    INTTYPE     shift, and go to state 2
    FLOATTYPE   shift, and go to state 3
    STRINGTYPE  shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    IF          shift, and go to state 6
    DOT         shift, and go to state 42
    FOR         shift, and go to state 7
    REPEAT      shift, and go to state 8
    WHILE       shift, and go to state 9
    SWITCH      shift, and go to state 10
    VOIDTYPE    shift, and go to state 11

    inner_code     go to state 43
    datatype       go to state 16
    const_type     go to state 17
    declaration    go to state 18
    Ifstmt         go to state 19
    repeat         go to state 20
    forloop        go to state 21
    whileloop      go to state 22
    function       go to state 23
    function_call  go to state 24
    switchstmt     go to state 25
    assignment     go to state 26


state 15

    3 code: inner_code .

    $default  reduce using rule 3 (code)


state 16

   18 const_type: datatype . CONST
   19 declaration: datatype . inner_declaration
   39 function: datatype . IDENTIFIER OPENBRACKET parameters CLOSEDBRACKET OPENBRACE code DOT RETURN EXPR DOT CLOSEDBRACE

    IDENTIFIER  shift, and go to state 44
    CONST       shift, and go to state 45

    inner_declaration  go to state 46


state 17

   20 declaration: const_type . inner_declaration

    IDENTIFIER  shift, and go to state 47

    inner_declaration  go to state 48


state 18

    6 inner_code: declaration .

    $default  reduce using rule 6 (inner_code)


state 19

    7 inner_code: Ifstmt .

    $default  reduce using rule 7 (inner_code)


state 20

   12 inner_code: repeat .

    $default  reduce using rule 12 (inner_code)


state 21

   11 inner_code: forloop .

    $default  reduce using rule 11 (inner_code)


state 22

    8 inner_code: whileloop .

    $default  reduce using rule 8 (inner_code)


state 23

   13 inner_code: function .

    $default  reduce using rule 13 (inner_code)


state 24

   10 inner_code: function_call .

    $default  reduce using rule 10 (inner_code)


state 25

    9 inner_code: switchstmt .

    $default  reduce using rule 9 (inner_code)


state 26

    5 inner_code: assignment .

    $default  reduce using rule 5 (inner_code)


state 27

   41 function_call: IDENTIFIER OPENBRACKET . list CLOSEDBRACKET

    MINUS        shift, and go to state 49
    OPENBRACKET  shift, and go to state 50
    INTEGER      shift, and go to state 51
    FLOAT        shift, and go to state 52
    IDENTIFIER   shift, and go to state 53

    list  go to state 54
    EXPR  go to state 55
    T     go to state 56
    M     go to state 57
    G     go to state 58


state 28

   69 assignment: IDENTIFIER INCREMENT .

    $default  reduce using rule 69 (assignment)


state 29

   70 assignment: IDENTIFIER DECREMENT .

    $default  reduce using rule 70 (assignment)


state 30

   66 assignment: IDENTIFIER EQUAL . EXPR
   67           | IDENTIFIER EQUAL . STRING
   68           | IDENTIFIER EQUAL . condition

    MINUS        shift, and go to state 49
    OPENBRACKET  shift, and go to state 59
    INTEGER      shift, and go to state 51
    STRING       shift, and go to state 60
    FLOAT        shift, and go to state 52
    IDENTIFIER   shift, and go to state 61
    NOT          shift, and go to state 62

    function_call    go to state 63
    condition        go to state 64
    inner_condition  go to state 65
    EXPR             go to state 66
    T                go to state 56
    M                go to state 57
    G                go to state 58


state 31

   72 assignment: IDENTIFIER MINUSEQ . EXPR

    MINUS        shift, and go to state 49
    OPENBRACKET  shift, and go to state 50
    INTEGER      shift, and go to state 51
    FLOAT        shift, and go to state 52
    IDENTIFIER   shift, and go to state 53

    EXPR  go to state 67
    T     go to state 56
    M     go to state 57
    G     go to state 58


state 32

   71 assignment: IDENTIFIER PLUSEQ . EXPR

    MINUS        shift, and go to state 49
    OPENBRACKET  shift, and go to state 50
    INTEGER      shift, and go to state 51
    FLOAT        shift, and go to state 52
    IDENTIFIER   shift, and go to state 53

    EXPR  go to state 68
    T     go to state 56
    M     go to state 57
    G     go to state 58


state 33

   73 assignment: IDENTIFIER MULTIPLYEQ . EXPR

    MINUS        shift, and go to state 49
    OPENBRACKET  shift, and go to state 50
    INTEGER      shift, and go to state 51
    FLOAT        shift, and go to state 52
    IDENTIFIER   shift, and go to state 53

    EXPR  go to state 69
    T     go to state 56
    M     go to state 57
    G     go to state 58


state 34

   74 assignment: IDENTIFIER DIVIDEEQ . EXPR

    MINUS        shift, and go to state 49
    OPENBRACKET  shift, and go to state 50
    INTEGER      shift, and go to state 51
    FLOAT        shift, and go to state 52
    IDENTIFIER   shift, and go to state 53

    EXPR  go to state 70
    T     go to state 56
    M     go to state 57
    G     go to state 58


state 35

   21 Ifstmt: IF OPENBRACKET . condition CLOSEDBRACKET OPENBRACE code DOT CLOSEDBRACE ELSE Ifstmt
   22       | IF OPENBRACKET . condition CLOSEDBRACKET OPENBRACE code DOT CLOSEDBRACE
   23       | IF OPENBRACKET . condition CLOSEDBRACKET OPENBRACE code DOT CLOSEDBRACE ELSE OPENBRACE code DOT CLOSEDBRACE

    MINUS        shift, and go to state 49
    OPENBRACKET  shift, and go to state 59
    INTEGER      shift, and go to state 51
    FLOAT        shift, and go to state 52
    IDENTIFIER   shift, and go to state 61
    NOT          shift, and go to state 62

    function_call    go to state 63
    condition        go to state 71
    inner_condition  go to state 65
    EXPR             go to state 72
    T                go to state 56
    M                go to state 57
    G                go to state 58


state 36

   28 forloop: FOR OPENBRACKET . iterator COMMA assignment CLOSEDBRACKET OPENBRACE code DOT CLOSEDBRACE

    INTTYPE     shift, and go to state 73
    IDENTIFIER  shift, and go to state 74

    iterator  go to state 75


state 37

   24 repeat: REPEAT OPENBRACE . inner_loop CLOSEDBRACE UNTIL OPENBRACKET condition CLOSEDBRACKET

    BOOLTYPE    shift, and go to state 1
    INTTYPE     shift, and go to state 2
    FLOATTYPE   shift, and go to state 3
    STRINGTYPE  shift, and go to state 4
    IDENTIFIER  shift, and go to state 5
    IF          shift, and go to state 6
    FOR         shift, and go to state 7
    REPEAT      shift, and go to state 8
    WHILE       shift, and go to state 9
    SWITCH      shift, and go to state 10
    VOIDTYPE    shift, and go to state 11

    code           go to state 76
    inner_code     go to state 15
    datatype       go to state 16
    const_type     go to state 17
    declaration    go to state 18
    Ifstmt         go to state 19
    repeat         go to state 20
    inner_loop     go to state 77
    forloop        go to state 21
    whileloop      go to state 22
    function       go to state 23
    function_call  go to state 24
    switchstmt     go to state 25
    assignment     go to state 26


state 38

   36 whileloop: WHILE OPENBRACKET . condition CLOSEDBRACKET OPENBRACE inner_loop CLOSEDBRACE

    MINUS        shift, and go to state 49
    OPENBRACKET  shift, and go to state 59
    INTEGER      shift, and go to state 51
    FLOAT        shift, and go to state 52
    IDENTIFIER   shift, and go to state 61
    NOT          shift, and go to state 62

    function_call    go to state 63
    condition        go to state 78
    inner_condition  go to state 65
    EXPR             go to state 72
    T                go to state 56
    M                go to state 57
    G                go to state 58


state 39

   44 switchstmt: SWITCH OPENBRACKET . IDENTIFIER CLOSEDBRACKET OPENBRACE case_structure DEFAULT OPENBRACE code DOT CLOSEDBRACE CLOSEDBRACE
   45           | SWITCH OPENBRACKET . IDENTIFIER CLOSEDBRACKET OPENBRACE case_structure CLOSEDBRACE

    IDENTIFIER  shift, and go to state 79


state 40

   40 function: VOIDTYPE IDENTIFIER . OPENBRACKET parameters CLOSEDBRACKET OPENBRACE code DOT RETURN DOT CLOSEDBRACE

    OPENBRACKET  shift, and go to state 80


state 41

    0 $accept: Start $end .

    $default  accept


state 42

    2 S: code DOT .

    $default  reduce using rule 2 (S)


state 43

    4 code: code inner_code .

    $default  reduce using rule 4 (code)


state 44

   31 inner_declaration: IDENTIFIER .
   32                  | IDENTIFIER . EQUAL EXPR
   33                  | IDENTIFIER . EQUAL BOOLEAN
   34                  | IDENTIFIER . EQUAL STRING
   35                  | IDENTIFIER . EQUAL condition
   39 function: datatype IDENTIFIER . OPENBRACKET parameters CLOSEDBRACKET OPENBRACE code DOT RETURN EXPR DOT CLOSEDBRACE

    OPENBRACKET  shift, and go to state 81
    EQUAL        shift, and go to state 82

    $default  reduce using rule 31 (inner_declaration)


state 45

   18 const_type: datatype CONST .

    $default  reduce using rule 18 (const_type)


state 46

   19 declaration: datatype inner_declaration .

    $default  reduce using rule 19 (declaration)


state 47

   31 inner_declaration: IDENTIFIER .
   32                  | IDENTIFIER . EQUAL EXPR
   33                  | IDENTIFIER . EQUAL BOOLEAN
   34                  | IDENTIFIER . EQUAL STRING
   35                  | IDENTIFIER . EQUAL condition

    EQUAL  shift, and go to state 82

    $default  reduce using rule 31 (inner_declaration)


state 48

   20 declaration: const_type inner_declaration .

    $default  reduce using rule 20 (declaration)


state 49

   85 G: MINUS . G

    MINUS        shift, and go to state 49
    OPENBRACKET  shift, and go to state 50
    INTEGER      shift, and go to state 51
    FLOAT        shift, and go to state 52
    IDENTIFIER   shift, and go to state 53

    G  go to state 83


state 50

   84 G: OPENBRACKET . EXPR CLOSEDBRACKET

    MINUS        shift, and go to state 49
    OPENBRACKET  shift, and go to state 50
    INTEGER      shift, and go to state 51
    FLOAT        shift, and go to state 52
    IDENTIFIER   shift, and go to state 53

    EXPR  go to state 84
    T     go to state 56
    M     go to state 57
    G     go to state 58


state 51

   86 G: INTEGER .

    $default  reduce using rule 86 (G)


state 52

   87 G: FLOAT .

    $default  reduce using rule 87 (G)


state 53

   88 G: IDENTIFIER .

    $default  reduce using rule 88 (G)


state 54

   41 function_call: IDENTIFIER OPENBRACKET list . CLOSEDBRACKET

    CLOSEDBRACKET  shift, and go to state 85


state 55

   42 list: EXPR .
   43     | EXPR . COMMA list
   75 EXPR: EXPR . PLUS T
   76     | EXPR . MINUS T

    MINUS  shift, and go to state 86
    PLUS   shift, and go to state 87
    COMMA  shift, and go to state 88

    $default  reduce using rule 42 (list)


state 56

   77 EXPR: T .
   78 T: T . MULTIPLY M
   79  | T . DIVIDE M
   80  | T . MOD M

    MULTIPLY  shift, and go to state 89
    DIVIDE    shift, and go to state 90
    MOD       shift, and go to state 91

    $default  reduce using rule 77 (EXPR)


state 57

   81 T: M .

    $default  reduce using rule 81 (T)


state 58

   82 M: G . POWER M
   83  | G .

    POWER  shift, and go to state 92

    $default  reduce using rule 83 (M)


state 59

   56 inner_condition: OPENBRACKET . condition CLOSEDBRACKET
   84 G: OPENBRACKET . EXPR CLOSEDBRACKET

    MINUS        shift, and go to state 49
    OPENBRACKET  shift, and go to state 59
    INTEGER      shift, and go to state 51
    FLOAT        shift, and go to state 52
    IDENTIFIER   shift, and go to state 61
    NOT          shift, and go to state 62

    function_call    go to state 63
    condition        go to state 93
    inner_condition  go to state 65
    EXPR             go to state 94
    T                go to state 56
    M                go to state 57
    G                go to state 58


state 60

   67 assignment: IDENTIFIER EQUAL STRING .

    $default  reduce using rule 67 (assignment)


state 61

   41 function_call: IDENTIFIER . OPENBRACKET list CLOSEDBRACKET
   88 G: IDENTIFIER .

    OPENBRACKET  shift, and go to state 27

    $default  reduce using rule 88 (G)


state 62

   51 condition: NOT . inner_condition
   55          | NOT . EXPR

    MINUS        shift, and go to state 49
    OPENBRACKET  shift, and go to state 59
    INTEGER      shift, and go to state 51
    FLOAT        shift, and go to state 52
    IDENTIFIER   shift, and go to state 61

    function_call    go to state 63
    inner_condition  go to state 95
    EXPR             go to state 96
    T                go to state 56
    M                go to state 57
    G                go to state 58


state 63

   65 inner_condition: function_call .

    $default  reduce using rule 65 (inner_condition)


state 64

   49 condition: condition . AND inner_condition
   50          | condition . OR inner_condition
   53          | condition . AND EXPR
   54          | condition . OR EXPR
   68 assignment: IDENTIFIER EQUAL condition .

    AND  shift, and go to state 97
    OR   shift, and go to state 98

    $default  reduce using rule 68 (assignment)


state 65

   52 condition: inner_condition .

    $default  reduce using rule 52 (condition)


state 66

   57 inner_condition: EXPR . GREATERTHAN EXPR
   58                | EXPR . GREATERTHANEQ EXPR
   59                | EXPR . LESSTHAN EXPR
   60                | EXPR . LESSTHANEQ EXPR
   61                | EXPR . EQUALITY BOOLEAN
   62                | EXPR . EQUALITY EXPR
   63                | EXPR . NOTEQUALITY BOOLEAN
   64                | EXPR . NOTEQUALITY EXPR
   66 assignment: IDENTIFIER EQUAL EXPR .
   75 EXPR: EXPR . PLUS T
   76     | EXPR . MINUS T

    MINUS          shift, and go to state 86
    PLUS           shift, and go to state 87
    GREATERTHANEQ  shift, and go to state 99
    LESSTHAN       shift, and go to state 100
    GREATERTHAN    shift, and go to state 101
    LESSTHANEQ     shift, and go to state 102
    EQUALITY       shift, and go to state 103
    NOTEQUALITY    shift, and go to state 104

    $default  reduce using rule 66 (assignment)


state 67

   72 assignment: IDENTIFIER MINUSEQ EXPR .
   75 EXPR: EXPR . PLUS T
   76     | EXPR . MINUS T

    MINUS  shift, and go to state 86
    PLUS   shift, and go to state 87

    $default  reduce using rule 72 (assignment)


state 68

   71 assignment: IDENTIFIER PLUSEQ EXPR .
   75 EXPR: EXPR . PLUS T
   76     | EXPR . MINUS T

    MINUS  shift, and go to state 86
    PLUS   shift, and go to state 87

    $default  reduce using rule 71 (assignment)


state 69

   73 assignment: IDENTIFIER MULTIPLYEQ EXPR .
   75 EXPR: EXPR . PLUS T
   76     | EXPR . MINUS T

    MINUS  shift, and go to state 86
    PLUS   shift, and go to state 87
